--- a/src/main/resources/templates/thymeleaf_page2.html
+++ b/src/main/resources/templates/thymeleaf_page2.html
@@ -10,15 +10,16 @@
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 
-
-    <!--<link rel="stylesheet"   th:href="@{/css/style.css}">
-    <script th:src="@{/js/template.js}"></script>-->
+    <!--
+    <link rel="stylesheet"   th:href="@{/css/style.css}">
+    <script th:src="@{/js/template.js}"></script>
+    -->
 </head>
 
 <body class="container bg-dark text-white">
 <!-- start codes -->
 
-<h2 class="text-center text-primary">Thymeleaf -2</h2>
+<h2 th:text="#{thymeleaf2}" class="text-center text-primary"></h2>
 <h2 th:text="${key_controller}" class="text-center text-warning"></h2>
 
 <!-- ends codes -->
