--- a/src/main/resources/templates/thymeleaf5.html
+++ b/src/main/resources/templates/thymeleaf5.html
@@ -10,17 +10,15 @@
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 
-    <!--
-    <link rel="stylesheet"   th:href="@{/css/style.css}">
-    <script th:src="@{/js/template.js}"></script>
-    -->
+    <!--<link rel="stylesheet"   th:href="@{/css/style.css}">
+    <script th:src="@{/js/template.js}"></script>-->
 </head>
 
 <body class="container bg-dark text-white">
 <!-- start codes -->
 
+<h2 th:text="${key_controller}" class="text-center text-warning"></h2>
 
-<h5 th:text="${key_controller}" class="text-center text-warning"></h5>
 
 <!-- ends codes -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
