--- a/src/main/resources/templates/thymeleaf8.html
+++ b/src/main/resources/templates/thymeleaf8.html
@@ -10,15 +10,17 @@
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 
-    <!--<link rel="stylesheet"   th:href="@{/css/style.css}">
-    <script th:src="@{/js/template.js}"></script>-->
+    <!--
+    <link rel="stylesheet"   th:href="@{/css/style.css}">
+    <script th:src="@{/js/template.js}"></script>
+    -->
 </head>
 
 <body class="container bg-dark text-white">
 <!-- start codes -->
 
-<h1 th:text="#{thymeleaf2}" class="text-center text-primary"></h1>
-<h2 th:text="${key_controller}" class="text-center text-warning"></h2>
+
+<h5 th:text="${key_controller}" class="text-center text-warning"></h5>
 
 <!-- ends codes -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
