--- a/src/main/resources/templates/thymeleaf9.html
+++ b/src/main/resources/templates/thymeleaf9.html
@@ -19,15 +19,9 @@
 <body class="container bg-dark text-white">
 <!-- start codes -->
 
-<p class="display-5 mt-5 mb-5 text-uppercase">Form</p>
-<form th:action="@{/form}" method="post" th:object="${form_key}">
-    <input type="text" class="form-control mb-4" id="name"    th:field="*{name}"    required placeholder="adınız" autofocus/>
-    <input type="text" class="form-control mb-4" id="surname" th:field="*{surname}" required placeholder="soyadınız"/>
-    <input type="password" class="form-control mb-4" id="password" th:field="*{password}" required placeholder="şifreniz"/>
-    <button class="btn btn-primary">Gönder</button>
-</form>
 
-<a href="/thymeleaf3">Deneme</a>
+<h5 th:text="${key}" class="text-center text-warning"></h5>
+
 <!-- ends codes -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
