--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,133 @@
-h2{
-    background-color: darkblue;
+/*
+project name: one pages 
+project date: 30-Mayis 2022
+project author: Hamit Mızrak
+project version: v.1
+*/
+/* ############################################################################ */
+/* common property */
+*{
+    margin: 0;
+    padding:0px;
+    box-sizing: border-box; 
+}
+
+body{
+    font-family: 'Quicksand', sans-serif;
+    position: relative;
+    background:#edeff1;
+}
+
+html{
+    font-size:20px;
+}
+
+ul{
+    list-style-type:none;
+}
+
+a{
+    text-decoration: none;
+}
+
+p{
+    text-align: justify;
+    margin-left:.7rem;
+    margin-right:.7rem;
+}
+
+
+/* ############################################################################ */
+/* line-clamp */
+.line_clamp3{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line_clamp4{
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.line_clamp5{
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.line_clamp6{
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.line_clamp7{
+    display: -webkit-box;
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+/* ############################################################################ */
+
+
+/*  nav */
+#logo_div{
+    /* border-radius:50%; */
+   
+}
+
+#logo_div:hover{
+    box-shadow: 1px 1px 4px 1px rgba(0,0,0,.6);
+    width: 10rem;
+}
+
+/* ############################################################################ */
+
+/* header */
+header{
+    background-image: url("images/header.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+    z-index:-1;
+    height:40rem;
+    padding-top:9rem;
+}
+
+/* main */
+#header_icon i{
+    color:red;
+    font-size: 8rem;
+}
+
+
+#header_icon .card{
+    box-shadow: 1px 1px 8px 1px rgba(0,0,0,.8);
+}
+
+#header_icon .card:hover{
+   cursor:pointer;
+   opacity:.7;
+}
+
+
+/* footer */
+footer{
+    min-height: 20rem;
+    width: auto;
+    background-color: #3d3d3d;
     color:white;
-    font-size: 2rem;
-    box-shadow: 1px 1px 1px 3px rgba(0,0,0,0.8);
-    border:1px solid white;
+}
+
+#address_id i{
+    margin-right:.6rem;
+    color:blueviolet;
+}
+
+#copy_right{
+    background: #2f3337;
 }
