--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <!-- title-->
 <title>My page</title>
 <!-- favicon -->
-<link rel="icon" href="../static/picture/favicon.jpg" />
+<link rel="icon" href="images/favicon.jpg" />
 
 <!-- Turkce karakter -->
 <meta charset="utf-8" />
