--- a/src/main/resources/templates/controller_list.html
+++ b/src/main/resources/templates/controller_list.html
@@ -43,7 +43,8 @@
 <body class="container bg-dark text-white">
 <!-- start codes -->
 
-<h2 class="display-4 text-uppercase text-center mt-5 mb-5">Controller Spring MVC Spring DATA</h2>
+<h2 class="display-4 text-uppercase text-center mt-5 mb-5">Spring MVC Spring DATA</h2>
+<a class="btn btn-primary">Add</a>
 <table class="table table-hover table-striped table-responsive table-dark">
     <thead>
     <tr>
