--- a/src/main/resources/templates/controller_add.html
+++ b/src/main/resources/templates/controller_add.html
@@ -33,37 +33,18 @@
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 
 <!-- External CSS -->
-<!--<link rel="stylesheet"   th:href="@{/css/style.css}">-->
+<link rel="stylesheet"   th:href="@{/css/style.css}">
 
 <!-- External JS -->
-<!--<script th:src="@{/js/template.js}"></script>-->
+<script th:src="@{/js/template.js}"></script>
 
 </head>
 
 <body class="container bg-dark text-white">
 <!-- start codes -->
 
-<h2 class="display-4 text-uppercase text-center mt-5 mb-5">Detail Page</h2>
-<a href="/list/controller/computer" class="btn btn-primary">List Pages</a>
+<h2 class="display-4 text-uppercase text-center mt-5 mb-5">Computer Add</h2>
 
-<div class="container">
-      <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                  <div class="card">
-                        <img class="card-img-top" th:src="@{/images/header.jpg}" alt="Title">
-                        <div class="card-body bg-primary text-white">
-                              <h4 class="card-title">Computer</h4>
-                              ID: <p th:text="${computer_details.id}" class="card-text"></p>
-                              NAME:<p th:text="${computer_details.computerName}" class="card-text"></p>
-                              PRICE:<p th:text="${computer_details.computerPrice}" class="card-text"></p>
-                              DATE:<p th:text="${computer_details.createdDate}" class="card-text"></p>
-                        </div>
-                  </div>
-            </div>
-            <div class="col-md"></div>
-      </div>
-</div>
 
 <!-- ends codes -->
 <!-- Bootstrap JavaScript Libraries -->
