--- a/src/main/resources/templates/flower_detail_pages.html
+++ b/src/main/resources/templates/flower_detail_pages.html
@@ -40,12 +40,33 @@
 
 </head>
 
-<body>
+<body class="container bg-dark text-white">
 <!-- start codes -->
-<h1 th:text="'Thymeleaf Html'"  th:class="'text-center text-primary'"  ></h1>
-<h2 class="text-center text-primary">Normal Bir yazı</h2>
 
+<h2 class="display-4 text-uppercase text-center mt-5 mb-5">Detail Page</h2>
+<a href="/flower/list" class="btn btn-primary">List Pages</a>
 
+<div class="container">
+      <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                  <div class="card">
+                        <img class="card-img-top" th:src="@{/images/header.jpg}" alt="Title">
+                        <div class="card-body bg-primary text-white">
+                              <h4 class="card-title">Flower</h4>
+                              ID: <p th:text="${flower_details.id}" class="card-text"></p>
+                              ADI:<p th:text="${flower_details.flowerName}" class="card-text"></p>
+                              PRICE:<p th:text="${flower_details.flowerPrice}" class="card-text"></p>
+                              TURU:<p th:text="${flower_details.flowerType}" class="card-text"></p>
+                              DATE:<p th:text="${flower_details.createdDate}" class="card-text"></p>
+                        </div>
+                  </div>
+            </div>
+            <div class="col-md"></div>
+      </div>
+</div>
+
+<!-- ends codes -->
 <!-- Bootstrap JavaScript Libraries -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
