--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,8 +40,17 @@
 
 </head>
 
+
 <body data-bs-spy="scroll" data-bs-target="#navbar-example">
     <!-- navbar start -->
+  <!--  http://localhost:8080/index  -->
+<!--
+    register:
+    userName
+    userPassword
+    userEmail
+    -->
+
     <!-- Navbar start -->
     <nav class="navbar fixed-top  navbar-expand-lg navbar-dark bg-dark">
         <!-- Container wrapper -->
